force-app/main/default/objects/Qualifying_Donation__c/Qualifying_Donation__c.object-meta.xml
<CustomObject>
    <description>Donations that qualify and related to challenge matches</description>
    <label>Qualifying Donation</label>
    <nameField>
        <displayFormat>CMQD-{00000}</displayFormat>
        <label>Qualifying Donation Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifying Donations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>