force-app/main/default/objects/Qualifying_Donation__c/fields/Annual_Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_Name__c</fullName>
    <formula>Annual_Match__r.Annual_Match_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Match Name</label>
    <type>Text</type>
</CustomField>