force-app/main/default/objects/Qualifying_Donation__c/fields/Annual_Match_Originating_Donation_Name__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_Originating_Donation_Name__c</fullName>
    <formula>Annual_Match_Originating_Donation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Match Originating Donation Name</label>
    <type>Text</type>
</CustomField>