force-app/main/default/objects/Qualifying_Donation__c/fields/Challenge_Match__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge Match</label>
    <referenceTo>Challenge_Match__c</referenceTo>
    <relationshipLabel>Qualifying Donations</relationshipLabel>
    <relationshipName>Qualifying_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>