force-app/main/default/objects/Qualifying_Donation__c/fields/Challenge_Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Name__c</fullName>
    <formula>Challenge_Match__r.Challenge_Match_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenge Match Name</label>
    <type>Text</type>
</CustomField>