force-app/main/default/objects/Qualifying_Donation__c/fields/Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount__c</fullName>
    <formula>Donation_Name__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>