force-app/main/default/objects/Qualifying_Donation__c/fields/Donation_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Last_Modified_Date__c</fullName>
    <label>Donation Last Modified Date</label>
    <type>DateTime</type>
</CustomField>