force-app/main/default/objects/Qualifying_Donation__c/fields/Donation_Last_Modified_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Donation_Last_Modified_Date_Formula__c</fullName>
    <description>Updated through Process Builder in LCRM.</description>
    <formula>Donation_Name__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Modified Date of the linked Donation Name</inlineHelpText>
    <label>Donation Last Modified Date</label>
    <type>DateTime</type>
</CustomField>