force-app/main/default/objects/Qualifying_Donation__c/fields/Gift_Administration_Approved__c.field-meta.xml
<CustomField>
    <fullName>Gift_Administration_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Administration Approved</label>
    <type>Checkbox</type>
</CustomField>