force-app/main/default/objects/Qualifying_Donation__c/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <formula>Donation_Name__r.Portfolio_Manager__r.FirstName &amp; &quot; &quot; &amp; Donation_Name__r.Portfolio_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Manager</label>
    <type>Text</type>
</CustomField>