force-app/main/default/objects/Qualifying_Donation__c/fields/Qualifying_Amount__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Amount__c</fullName>
    <label>Qualifying Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>