force-app/main/default/objects/Qualifying_Donation__c/fields/Qualifying_Payment__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualifying Payment</label>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>Qualifying Donations</relationshipLabel>
    <relationshipName>Qualifying_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>